# Autonomus_Doc_intel_engine

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/commands/: ci-check.md  run-tests.md  sprint-finish.md  update-deps.md
.github/workflows/: ci.yml
config/keywords/: bank_statement.yaml  categories.yaml  contract.yaml  invoice.yaml  purchase_order.yaml  receipt.yaml  report.yaml  resume.yaml
docs/: architecture.md  generate_architecture.py
src/: __init__.py  watcher.py
src/api/: __init__.py  main.py  server.py
src/classifiers/: __init__.py  engine.py
src/config/: __init__.py  loader.py
src/metadata/: extractor.py
src/models/: __init__.py  schemas.py
src/pipeline/: __init__.py  graph.py  state.py
src/pipeline/nodes/: __init__.py  audit.py  classify.py  llm.py  output.py  parse.py  validate.py
tests/: test_api.py  test_audit.py  test_classifier.py  test_config.py  test_llm_fallback.py  test_metadata.py  test_parse.py  test_pipeline.py  test_validate.py  test_watcher.py
tests/fixtures/: README.md  generate_fixtures.py
ui/: chainlit_app.py  gradio_app.py
